# django-admin-index

./: .bumpversion.cfg  .coveragerc  .editorconfig  .flake8  .gitignore  .isort.cfg  .travis.yml  CHANGELOG.rst  CHANGES  CONTRIBUTORS.rst  LICENSE  MANIFEST.in  Makefile  README.rst  manage.py  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  code_quality.yml  python-publish.yml
django_admin_index/: __init__.py  admin.py  apps.py  conf.py  context_processors.py  models.py  settings.py  translations.py  utils.py
django_admin_index/compat/: django18.py
django_admin_index/locale/nl/LC_MESSAGES/: django.mo  django.po
django_admin_index/migrations/: 0001_initial.py  0002_auto_20170802_1754.py  0003_auto_20200724_1516.py  0004_auto_20230503_0723.py  0005_auto_20230503_1910.py  0006_auto_20230503_1910.py
django_admin_index/static/admin/css/: admin-index.css  admin-index.css.map  admin-index.js.map  admin-index.map
django_admin_index/templates/admin/: app_list.html  base.html  change_form.html  change_list.html  delete_confirmation.html  delete_selected_confirmation.html  index.html  nav_sidebar.html  object_history.html
django_admin_index/templates/django_admin_index/includes/: app_list.html
django_admin_index/templates/includes/: app_list.html
django_admin_index/templates/registration/: password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
django_admin_index/templatetags/: django_admin_index.py
requirements/: default.txt  pkgutils.txt  test-ci.txt  test.txt
scss/: _django22.scss  _vars.scss  admin-index.scss
scss/components/: _breadcrumbs.scss  _containers.scss  _dropdown-menu.scss  _environment.scss  _header.scss  _main.scss
tests/proj/: settings.py  urls.py  wsgi.py
tests/unit/: test_admin_index.py  test_app_group.py  test_app_link.py  test_integration.py  test_validators.py
