# setuptools config
# see http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = django-admin-index
version = 2.0.2
description = Admin index for Django
long_description = file: README.rst
url = https://github.com/maykinmedia/django-admin-index
project_urls =
    ; Documentation = http://django-admin-index.readthedocs.io/en/latest/
    Changelog = https://github.com/maykinmedia/django-admin-index/blob/master/CHANGELOG.rst
    Bug Tracker = https://github.com/maykinmedia/django-admin-index/issues
    Source Code = https://github.com/maykinmedia/django-admin-index
license = BSD
author = Joeri Bekker
author_email = joeri@maykinmedia.nl
keywords = django, index, dashboard
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    django >= 2.2
    django-ordered-model >= 3.5
tests_require =
    pytest
    pytest-django
    tox
    isort
    black

[options.packages.find]
include =
    django_admin_index
    django_admin_index.*

[options.extras_require]
tests =
    pytest
    pytest-django
    tox
    isort
    black
pep8 = flake8
coverage = pytest-cov
; docs =
;     sphinx
;     sphinx-rtd-theme
release =
    bump2version
    twine

# 3rd party configuration
[aliases]
test=pytest

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 88
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
skip = env,.tox,.history,.eggs
known_django=django
known_first_party=django_admin_index
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
testpaths = tests/unit
python_classes = test_*
DJANGO_SETTINGS_MODULE=tests.proj.settings

[pep8]
[flake8]
max-line-length = 88
exclude =
    env
    .tox
    doc
    **/migrations/*
